force-app/main/default/objects/Service_Center_Maintenance__c.object
<CustomObject>
    <fields>
        <fullName>Displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that decides if the message is displayed on the page.</description>
        <label>Displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The end time for the message to be displayed on the Service Center</description>
        <inlineHelpText>The end time for the message to be displayed on the Service Center</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The message to be displayed on the service center</description>
        <label>Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The start time for the message to be displayed on the Service Center</description>
        <inlineHelpText>The start time for the message to be displayed on the Service Center</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Custom object that displays service center maintenance messages</description>
    <label>Service Center Maintenance</label>
</CustomObject>