force-app/main/default/objects/Service_Center_Maintenance__c/listViews/All_Messages.listView-meta.xml
<ListView>
    <fullName>All_Messages</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Displayed__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Messages</label>
</ListView>